tests/type/errors/bad-mixed-array.typedsol
2:18 error: Arrays must contain values of uniform type